<resources>
    <string name="app_name">All Chalisa</string>
    <string name="title0">All Chalisa</string>
    <string name="OpenDrawer">open navigation drawer</string>
    <string name="CloseDrawer">close navigation drawer </string>
    <string name="Contactus">
        <br><b>Contact us</b>\n</br>
    </string>
    <string name="mail">
        <br>Email Id:\n</br>
        <br>\n</br>
        <br>Guptaayush1146543@gmail.com</br>
    </string>
    <string name="about">
        <br>    "All Chalisa" is a comprehensive Android application offering a diverse collection
            of Hindu chalisas, providing users a convenient platform to connect with and recite
            prayers dedicated to various deities for spiritual enrichment and guidance.\n</br>
        <br>\n</br>

    </string>
    <string name="developer"><br>Developed By : Ayush Gupta</br><br>\n</br><br>Version 1.0</br></string>
    <string name="title"><b>श्री हनुमान चालीसा</b><hr></hr></string>
    <string name="HanumanChalisa"><br>।।दोहा।।\n</br>
<br>श्रीगुरु चरन सरोज रज निजमनु मुकुरु सुधारि।\n</br>
<br>बरनउँ रघुबर बिमल जसु जो दायकु फल चारि।।\n</br>
<br>\n</br>
<br>बुद्धिहीन तनु जानिके, सुमिरौं पवन-कुमार।\n</br>
<br>बल बुधि बिद्या देहु मोहिं, हरहु कलेस बिकार।।\n</br>

<br>\n</br>
  <br>।।चौपाई।।\n</br>
<br>जय हनुमान ज्ञान गुन सागर। जय कपीस तिहुं लोक उजागर।।\n</br>
       <br> रामदूत अतुलित बल धामा। अंजनि-पुत्र पवनसुत नामा।।\n</br>
<br>\n</br>
<br>महावीर विक्रम बजरंगी। कुमति निवार सुमति के संगी।।\n</br>
    <br>    कंचन वरन विराज सुवेसा। कानन कुण्डल कुंचित केसा।।\n</br>
<br>\n</br>
<br>हाथ बज्र औ ध्वजा बिराजै। काँधे मूँज जनेऊ साजै।\n</br>
    <br>    शंकर सुवन केसरीनंदन। तेज प्रताप महा जग वन्दन।।\n</br>
<br>\n</br>
<br>विद्यावान गुणी अति चातुर।राम काज करिबे को आतुर।।\n</br>
    <br>    प्रभु चरित्र सुनिबे को रसिया। राम लखन सीता मन बसिया।।\n</br>
<br>\n</br>
<br>सूक्ष्म रूप धरि सियहिं दिखावा। विकट रूप धरि लंक जरावा।।\n</br>
    <br>    भीम रूप धरि असुर संहारे। रामचंद्र के काज संवारे।।\n</br>
<br>\n</br>
<br>लाय सजीवन लखन जियाये। श्रीरघुबीर हरषि उर लाये।।\n</br>
    <br>    रघुपति कीन्ही बहुत बड़ाई। तुम मम प्रिय भरतहि सम भाई।।\n</br>
<br>\n</br>
<br>सहस बदन तुम्हरो जस गावैं। अस कहि श्रीपति कंठ लगावैं।।\n</br>
    <br>    सनकादिक ब्रह्मादि मुनीशा। नारद सारद सहित अहीसा।।\n</br>
<br>\n</br>
<br>जम कुबेर दिगपाल जहां ते। कवि कोविद कहि सके कहाँ ते।।\n</br>
    <br>    तुम उपकार सुग्रीवहिं कीन्हा। राम मिलाय राज पद दीन्हा।।\n</br>
<br>\n</br>
<br>तुम्हरो मंत्र विभीषन माना। लंकेश्वर भये सब जग जाना।।\n</br>
    <br>    जुग सहस्र योजन पर भानू। लील्यो ताहि मधुर फल जानू।।\n</br>
<br>\n</br>
<br>प्रभु मुद्रिका मेलि मुख माहीं। जलधि लांघि गये अचरज नाहीं।।\n</br>
    <br>    दुर्गम काज जगत के जेते। सुगम अनुग्रह तुम्हरे तेते।।\n</br>
<br>\n</br>
<br>राम दुआरे तुम रखवारे। होत न आज्ञा बिनु पैसारे।।\n</br>
    <br>    सब सुख लहै तुम्हारी सरना। तुम रक्षक काहू को डरना।।\n</br>
<br>\n</br>
<br>आपन तेज सम्हारो आपै। तीनों लोक हांक तें कांपै।।\n</br>
    <br>    भूत पिसाच निकट नहिं आवै। महाबीर जब नाम सुनावै।।\n</br>
<br>\n</br>
<br>नासै रोग हरै सब पीरा। जपत निरंतर हनुमत बीरा।।\n</br>
    <br>    संकट तें हनुमान छुड़ावै। मन क्रम वचन ध्यान जो लावै।।\n</br>
<br>\n</br>
<br>सब पर राम तपस्वी राजा। तिनके काज सकल तुम साजा।\n</br>
    <br>    और मनोरथ जो कोई लावै।सोई अमित जीवन फल पावै।।\n</br>
<br>\n</br>
<br>चारों युग परताप तुम्हारा। है परसिद्ध जगत उजियारा।।\n</br>
    <br>    साधु-संत के तुम रखवारे। असुर निकंदन राम दुलारे।।\n</br>
<br>\n</br>
<br>अष्ट सिद्धि नौ निधि के दाता। अस वर दीन जानकी माता।।\n</br>
    <br>    राम रसायन तुम्हरे पासा। सदा रहो रघुपति के दासा।।\n</br>
<br>\n</br>
<br>तुम्हरे भजन राम को भावै। जनम-जनम के दुख बिसरावै।।\n</br>
    <br>    अन्त काल रघुबर पुर जाई। जहाँ जन्म हरि-भक्त कहाई।।\n</br>
<br>\n</br>
<br>और देवता चित्त न धरई। हनुमत सेई सर्व सुख करई।।\n</br>
      <br>  संकट कटै मिटै सब पीरा। जो सुमिरै हनुमत बलबीरा।।\n</br>
<br>\n</br>
<br>जै जै जै हनुमान गोसाईं। कृपा करहु गुरुदेव की नाईं।।\n</br>
    <br>    जो सत बार पाठ कर कोई। छूटहिं बंदि महा सुख होई।।\n</br>
<br>\n</br>
<br>जो यह पढ़ै हनुमान चालीसा। होय सिद्धि साखी गौरीसा।।\n</br>
    <br>    तुलसीदास सदा हरि चेरा। कीजै नाथ हृदय महँ डेरा।।\n</br>
<br>\n</br>
<br>।।दोहा।।\n</br>

                <br>पवनतनय संकट हरन, मंगल मूरति रूप।\n</br>
                <br> राम लखन सीता सहित, हृदय बसहु सुर भूप।।\n</br>
        </string>
    <string name="title2"><b>श्री गणेश चालीसा</b></string>
    <string name="GaneshChalisa"><br>॥ दोहा ॥\n</br>

<br>जय गणपति सदगुण सदन,
कविवर बदन कृपाल ।\n</br>
<br>विघ्न हरण मंगल करण,
जय जय गिरिजालाल ॥\n</br>
     <br>\n</br>
        <br>॥ चौपाई ॥\n</br>
<br>जय जय जय गणपति गणराजू ।
मंगल भरण करण शुभः काजू ॥\n</br>
<br>जै गजबदन सदन सुखदाता ।
विश्व विनायका बुद्धि विधाता ॥\n</br>
<br>\n</br>
<br>वक्र तुण्ड शुची शुण्ड सुहावना ।
तिलक त्रिपुण्ड भाल मन भावन ॥\n</br>
<br>राजत मणि मुक्तन उर माला ।
स्वर्ण मुकुट शिर नयन विशाला ॥\n</br>
<br>\n</br>
<br>पुस्तक पाणि कुठार त्रिशूलं ।
मोदक भोग सुगन्धित फूलं ॥\n</br>
<br>सुन्दर पीताम्बर तन साजित ।
चरण पादुका मुनि मन राजित ॥\n</br>
<br>\n</br>
<br>धनि शिव सुवन षडानन भ्राता ।
गौरी लालन विश्व-विख्याता ॥\n</br>
<br>ऋद्धि-सिद्धि तव चंवर सुधारे ।
मुषक वाहन सोहत द्वारे ॥\n</br>
<br>\n</br>
<br>कहौ जन्म शुभ कथा तुम्हारी ।
अति शुची पावन मंगलकारी ॥\n</br>
<br>एक समय गिरिराज कुमारी ।
पुत्र हेतु तप कीन्हा भारी ॥\n</br>
<br>\n</br>
<br>भयो यज्ञ जब पूर्ण अनूपा ।
तब पहुंच्यो तुम धरी द्विज रूपा ॥\n</br>
<br>अतिथि जानी के गौरी सुखारी ।
बहुविधि सेवा करी तुम्हारी ॥\n</br>
<br>\n</br>
<br>अति प्रसन्न हवै तुम वर दीन्हा ।
मातु पुत्र हित जो तप कीन्हा ॥\n</br>
<br>मिलहि पुत्र तुहि, बुद्धि विशाला ।
बिना गर्भ धारण यहि काला ॥\n</br>
<br>\n</br>
<br>गणनायक गुण ज्ञान निधाना ।
पूजित प्रथम रूप भगवाना ॥\n</br>
<br>अस कही अन्तर्धान रूप हवै ।
पालना पर बालक स्वरूप हवै ॥\n</br>
<br>\n</br>
<br>बनि शिशु रुदन जबहिं तुम ठाना ।
लखि मुख सुख नहिं गौरी समाना ॥\n</br>
<br>सकल मगन, सुखमंगल गावहिं ।
नाभ ते सुरन, सुमन वर्षावहिं ॥\n</br>
<br>\n</br>
<br>शम्भु, उमा, बहुदान लुटावहिं ।
सुर मुनिजन, सुत देखन आवहिं ॥\n</br>
<br>लखि अति आनन्द मंगल साजा ।
देखन भी आये शनि राजा ॥\n</br>
<br>\n</br>
<br>निज अवगुण गुनि शनि मन माहीं ।
बालक, देखन चाहत नाहीं ॥\n</br>
<br>गिरिजा कछु मन भेद बढायो ।
उत्सव मोर, न शनि तुही भायो ॥\n</br>
<br>\n</br>
<br>कहत लगे शनि, मन सकुचाई ।
का करिहौ, शिशु मोहि दिखाई ॥\n</br>
<br>नहिं विश्वास, उमा उर भयऊ ।
शनि सों बालक देखन कहयऊ ॥\n</br>
<br>\n</br>
<br>पदतहिं शनि दृग कोण प्रकाशा ।
बालक सिर उड़ि गयो अकाशा ॥\n</br>
<br>गिरिजा गिरी विकल हवै धरणी ।
सो दुःख दशा गयो नहीं वरणी ॥\n</br>
<br>\n</br>
<br>हाहाकार मच्यौ कैलाशा ।
शनि कीन्हों लखि सुत को नाशा ॥\n</br>
<br>तुरत गरुड़ चढ़ि विष्णु सिधायो ।
काटी चक्र सो गज सिर लाये ॥\n</br>
<br>\n</br>
<br>बालक के धड़ ऊपर धारयो ।
प्राण मन्त्र पढ़ि शंकर डारयो ॥\n</br>
<br>नाम गणेश शम्भु तब कीन्हे ।
प्रथम पूज्य बुद्धि निधि, वर दीन्हे ॥\n</br>
<br>\n</br>
<br>बुद्धि परीक्षा जब शिव कीन्हा ।
पृथ्वी कर प्रदक्षिणा लीन्हा ॥\n</br>
<br>चले षडानन, भरमि भुलाई ।
रचे बैठ तुम बुद्धि उपाई ॥\n</br>
<br>\n</br>
<br>चरण मातु-पितु के धर लीन्हें ।
तिनके सात प्रदक्षिण कीन्हें ॥\n</br>
<br>धनि गणेश कही शिव हिये हरषे ।
नभ ते सुरन सुमन बहु बरसे ॥\n</br>
<br>\n</br>
<br>तुम्हरी महिमा बुद्धि बड़ाई ।
शेष सहसमुख सके न गाई ॥\n</br>
<br>मैं मतिहीन मलीन दुखारी ।
करहूं कौन विधि विनय तुम्हारी ॥\n</br>
<br>\n</br>
<br>भजत रामसुन्दर प्रभुदासा ।
जग प्रयाग, ककरा, दुर्वासा ॥\n</br>
<br>अब प्रभु दया दीना पर कीजै ।
अपनी शक्ति भक्ति कुछ दीजै ॥\n</br>
<br>\n</br>
<br>॥ दोहा ॥\n</br>
<br>श्री गणेश यह चालीसा,
पाठ करै कर ध्यान ।\n</br>
<br>नित नव मंगल गृह बसै,
लहे जगत सन्मान ॥\n</br>
<br>\n</br>
<br>सम्बन्ध अपने सहस्त्र दश,
ऋषि पंचमी दिनेश ।\n</br>
    <br>पूरण चालीसा भयो,
        मंगल मूर्ती गणेश ॥\n
    </br>
    </string>
    <string name="title3"><b>श्री शनि चालीसा</b></string>
    <string name="ShaniChalisa">

        <br><b>॥ दोहा ॥</b>\n</br>
<br>जय गणेश गिरिजा सुवन, मंगल करण कृपाल ।\n</br>
   <br> दीनन के दुख दूर करि, कीजै नाथ निहाल ॥\n</br>
        <br>\n</br>
        <br>जय जय श्री शनिदेव प्रभु, सुनहु विनय महाराज ।\n</br>
       <br> करहु कृपा हे रवि तनय, राखहु जन की लाज ॥\n</br>
        <br>\n</br>
        <br>॥ चौपाई ॥\n</br>
        <br>जयति जयति शनिदेव दयाला ।
करत सदा भक्तन प्रतिपाला ॥
\n</br>
        <br>चारि भुजा, तनु श्याम विराजै ।
माथे रतन मुकुट छबि छाजै ॥\n</br>
        <br>\n</br>
        <br>परम विशाल मनोहर भाला ।
टेढ़ी दृष्टि भृकुटि विकराला ॥\n</br>
        <br>कुण्डल श्रवण चमाचम चमके ।
हिय माल मुक्तन मणि दमके ॥ ४॥\n</br>
        <br>\n</br>
<br>कर में गदा त्रिशूल कुठारा ।
पल बिच करैं अरिहिं संहारा ॥\n</br>

<br>पिंगल, कृष्णों, छाया नन्दन ।
यम, कोणस्थ, रौद्र, दुखभंजन ॥\n</br>
<br>\n</br>
<br>सौरी, मन्द, शनी, दश नामा ।
भानु पुत्र पूजहिं सब कामा ॥\n</br>

<br>जा पर प्रभु प्रसन्न ह्वैं जाहीं ।
रंकहुँ राव करैं क्षण माहीं ॥ ८॥\n</br>
<br>\n</br>
<br>पर्वतहू तृण होई निहारत ।
तृणहू को पर्वत करि डारत ॥\n</br>

<br>राज मिलत बन रामहिं दीन्हयो ।
कैकेइहुँ की मति हरि लीन्हयो ॥\n</br>
<br>\n</br>
<br>बनहूँ में मृग कपट दिखाई ।
मातु जानकी गई चुराई ॥\n</br>

<br>लखनहिं शक्ति विकल करिडारा ।
मचिगा दल में हाहाकारा ॥ १२॥\n</br>
<br>\n</br>
<br>रावण की गतिमति बौराई ।
रामचन्द्र सों बैर बढ़ाई ॥\n</br>

<br>दियो कीट करि कंचन लंका ।
बजि बजरंग बीर की डंका ॥\n</br>
<br>\n</br>
<br>नृप विक्रम पर तुहि पगु धारा ।
चित्र मयूर निगलि गै हारा ॥\n</br>

<br>हार नौलखा लाग्यो चोरी ।
हाथ पैर डरवाय तोरी ॥ १६॥\n</br>
<br>\n</br>
<br>भारी दशा निकृष्ट दिखायो ।
तेलिहिं घर कोल्हू चलवायो ॥\n</br>

<br>विनय राग दीपक महं कीन्हयों ।
तब प्रसन्न प्रभु ह्वै सुख दीन्हयों ॥\n</br>
<br>\n</br>
<br>हरिश्चन्द्र नृप नारि बिकानी ।
आपहुं भरे डोम घर पानी ॥\n</br>

<br>तैसे नल पर दशा सिरानी ।
भूंजीमीन कूद गई पानी ॥ २०॥\n</br>
<br>\n</br>
<br>श्री शंकरहिं गह्यो जब जाई ।
पारवती को सती कराई ॥\n</br>

<br>तनिक विलोकत ही करि रीसा ।
नभ उड़ि गयो गौरिसुत सीसा ॥\n</br>
<br>\n</br>
<br>पाण्डव पर भै दशा तुम्हारी ।
बची द्रौपदी होति उघारी ॥\n</br>

<br>कौरव के भी गति मति मारयो ।
युद्ध महाभारत करि डारयो ॥ २४॥\n</br>
<br>\n</br>
<br>रवि कहँ मुख महँ धरि तत्काला ।
लेकर कूदि परयो पाताला ॥\n</br>

<br>शेष देवलखि विनती लाई ।
रवि को मुख ते दियो छुड़ाई ॥\n</br>
<br>\n</br>
<br>वाहन प्रभु के सात सजाना ।
जग दिग्गज गर्दभ मृग स्वाना ॥\n</br>

<br>जम्बुक सिंह आदि नख धारी ।
सो फल ज्योतिष कहत पुकारी ॥ २८॥\n</br>
<br>\n</br>
<br>गज वाहन लक्ष्मी गृह आवैं ।
हय ते सुख सम्पति उपजावैं ॥\n</br>

<br>गर्दभ हानि करै बहु काजा ।
सिंह सिद्धकर राज समाजा ॥\n</br>
<br>\n</br>
<br>जम्बुक बुद्धि नष्ट कर डारै ।
मृग दे कष्ट प्राण संहारै ॥\n</br>

<br>जब आवहिं प्रभु स्वान सवारी ।
चोरी आदि होय डर भारी ॥ ३२॥\n</br>
<br>\n</br>
<br>तैसहि चारि चरण यह नामा ।
स्वर्ण लौह चाँदी अरु तामा ॥\n</br>

<br>लौह चरण पर जब प्रभु आवैं ।
धन जन सम्पत्ति नष्ट करावैं ॥\n</br>
<br>\n</br>
<br>समता ताम्र रजत शुभकारी ।
स्वर्ण सर्व सर्व सुख मंगल भारी ॥\n</br>

<br>जो यह शनि चरित्र नित गावै ।
कबहुं न दशा निकृष्ट सतावै ॥ ३६॥\n</br>
<br>\n</br>
<br>अद्भुत नाथ दिखावैं लीला ।
करैं शत्रु के नशि बलि ढीला ॥\n</br>

<br>जो पण्डित सुयोग्य बुलवाई ।
विधिवत शनि ग्रह शांति कराई ॥\n</br>
<br>\n</br>
<br>पीपल जल शनि दिवस चढ़ावत ।
दीप दान दै बहु सुख पावत ॥\n</br>

<br>कहत राम सुन्दर प्रभु दासा ।
शनि सुमिरत सुख होत प्रकाशा ॥ ४०॥\n</br>
<br>\n</br>
        <br>॥ दोहा ॥\n</br>
<br>पाठ शनिश्चर देव को, की हों भक्त तैयार ।\n</br>
        <br>करत पाठ चालीस दिन, हो भवसागर पार ॥\n</br>
    </string>
    <string name="title4"><b>श्री शिव चालीसा</b></string>
    <string name="title5"><b>श्री सूर्य देव चालीसा </b></string>
    <string name="title6"><b>श्री कृष्ण चालीसा </b></string>
    <string name="title7"><b>श्री दुर्गा चालीसा </b></string>
    <string name="title8"><b>श्री राम चालीसा</b></string>
    <string name="title9"><b>श्री लक्ष्मी चालीसा</b></string>
    <string name="title10"><b>सरस्वती चालीसा</b></string>
    <string name="about_us">About us<br>\n</br></string>
</resources>