<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".Read">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Button
                android:id="@+id/btn1"
                android:onClick="btn1"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:text="@string/title"
                android:textAlignment="center"
                android:textSize="20sp"
                android:backgroundTint="#9169D8"
                tools:ignore="DuplicateIds">

            </Button>
            <Button
                android:id="@+id/btn2"
                android:onClick="btn2"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:text="@string/title2"
                android:textAlignment="center"
                android:textSize="20sp"
                android:backgroundTint="#9169D8"
                tools:ignore="DuplicateIds">

            </Button>
            <Button
                android:id="@+id/btn3"
                android:onClick="btn3"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:text="@string/title3"
                android:textAlignment="center"
                android:textSize="20sp"
                android:backgroundTint="#9169D8"
                tools:ignore="DuplicateIds">

            </Button>
            <Button
                android:id="@+id/btn4"
                android:onClick="btn4"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:text="@string/title4"
                android:textAlignment="center"
                android:textSize="20sp"
                android:backgroundTint="#9169D8"
                tools:ignore="DuplicateIds">

            </Button>
            <Button
                android:id="@+id/btn5"
                android:onClick="btn5"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:text="@string/title5"
                android:textAlignment="center"
                android:textSize="20sp"
                android:backgroundTint="#9169D8"
                tools:ignore="DuplicateIds">

            </Button>
            <Button
                android:id="@+id/btn6"
                android:onClick="btn6"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:text="@string/title6"
                android:textAlignment="center"
                android:textSize="20sp"
                android:backgroundTint="#9169D8"
                tools:ignore="DuplicateIds">

            </Button>
            <Button
                android:id="@+id/btn7"
                android:onClick="btn7"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:text="@string/title7"
                android:textAlignment="center"
                android:textSize="20sp"
                android:backgroundTint="#9169D8"
                tools:ignore="DuplicateIds">

            </Button>
            <Button
                android:id="@+id/btn8"
                android:onClick="btn8"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:text="@string/title8"
                android:textAlignment="center"
                android:textSize="20sp"
                android:backgroundTint="#9169D8"
                tools:ignore="DuplicateIds">

            </Button>
            <Button
                android:id="@+id/btn9"
                android:onClick="btn9"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:text="@string/title9"
                android:textAlignment="center"
                android:textSize="20sp"
                android:backgroundTint="#9169D8"
                tools:ignore="DuplicateIds">

            </Button>
            <Button
                android:id="@+id/btn10"
                android:onClick="btn10"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="40dp"
                android:text="@string/title10"
                android:textAlignment="center"
                android:textSize="20sp"
                android:backgroundTint="#9169D8"
                tools:ignore="DuplicateIds">

            </Button>

        </LinearLayout>
    </ScrollView>
</LinearLayout>