<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".aboutFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_us"
        android:paddingTop="10dp"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/white"
        android:textSize="40sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about"
        android:textStyle="bold"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="250dp"

        android:textSize="15sp"
        android:justificationMode="inter_word"
        android:textColor="@color/white"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/developer"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="15sp"/>
</LinearLayout>